# Agentic-RAG-Server

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  smoke_test_llm.py
.github/skills/auto-coder/: SKILL.md
.github/skills/interview-prep/: SKILL.md
.github/skills/package/: SKILL.md
.github/skills/project-learner/: SKILL.md
.github/skills/qa-tester/: SKILL.md
.github/skills/resume-writer/: SKILL.md
.github/skills/setup/: SKILL.md
.github/skills/skill-creator/: SKILL.md
agent_layer/: __init__.py
agent_layer/core/: __init__.py
agent_layer/tests/: __init__.py
agent_layer/tools/: __init__.py
agent_layer/versions/: __init__.py
config/: settings.yaml
docs/superpowers/plans/: 2026-06-21-agentic-rag-server-plan.md
docs/superpowers/specs/: 2026-06-21-agentic-rag-server-design.md
rag_mcp_server/: __init__.py
rag_mcp_server/src/: __init__.py
rag_mcp_server/src/core/: __init__.py  settings.py
rag_mcp_server/src/ingestion/: __init__.py
rag_mcp_server/tests/: __init__.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_chroma_store.py  test_config_loading.py  test_conftest_fixtures.py  test_cross_encoder_reranker.py  test_embedding_factory.py  test_embedding_providers.py  test_env_loading.py  test_evaluator_factory.py  test_llm_reranker.py  test_package_structure.py  test_recursive_splitter.py  test_reranker_factory.py  test_smoke_imports.py  test_splitter_factory.py  test_vector_store_factory.py  test_vision_factory.py
(+50 files in other folders)
