[project]
name = "agentic-rag-server"
version = "0.1.0"
description = "A modular RAG system with Agent-driven autonomous decision-making and cascade fallback"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Y1pser" }
]

dependencies = [
    "chromadb>=0.5.0",
    "langchain>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    "mcp>=1.0.0",
    "openai>=1.50.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "ragas>=0.2.0",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.35.0",
    "markitdown>=0.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "rag_mcp_server/tests", "agent_layer/tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["rag_mcp_server*", "agent_layer*"]
